Refactoring of reporting output. Selenium